<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="RS232" Id="{2b58ddf2-7b8d-4cf7-b654-35ac01d51d81}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	{attribute 'OPC.UA.DA' := '1'}
	EL6001_ComController: SerialLineControl;
	{attribute 'OPC.UA.DA' := '1'}
	RxBuffer: ComBuffer;
	{attribute 'OPC.UA.DA' := '1'}
	TxBuffer: ComBuffer;
	{attribute 'OPC.UA.DA' := '1'}
	ComOUT1 AT%Q* : EL6outData22B;
	{attribute 'OPC.UA.DA' := '1'}
	ComIN1 AT%I* : EL6inData22B;
	{attribute 'OPC.UA.DA' := '1'}
	EL6001_ErrorID: ComError_t;
	{attribute 'OPC.UA.DA' := '1'}
	EL6001_Error : BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	SendString: STRING;
	{attribute 'OPC.UA.DA' := '1'}
	LastReceivedstring: STRING;
	{attribute 'OPC.UA.DA' := '1'}
	ReceivedString: STRING;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>